Stable new 1-st commit

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
-pythonpath = blogicum/
+pythonpath = blogicum/ .
 DJANGO_SETTINGS_MODULE = blogicum.settings
-norecursedirs = env/* venv/*
+norecursedirs = env/*
 addopts = -vv -p no:cacheprovider --disable-warnings
 testpaths = tests/
 python_files = test_*.py
-django_find_project = true
+django_debug_mode = true
