Stable after custom errors rework

--- a/.gitignore
+++ b/.gitignore
@@ -58,8 +58,6 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
-db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -147,3 +145,6 @@ dmypy.json
 
 # папки со статикой и медиа
 media/
+
+sent_emails/
+
